// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`color scheme light 1`] = `
{
  "blue": [
    [
      "$blue50",
      "#EBF7FA",
    ],
    [
      "$blue800",
      "#0A86B7",
    ],
  ],
  "carrot": [
    [
      "$orange50",
      "#FFF5F0",
    ],
    [
      "$orange100",
      "#FFE2D2",
    ],
    [
      "$orange200",
      "#FFD2B9",
    ],
    [
      "$orange300",
      "#FFBC97",
    ],
    [
      "$orange400",
      "#FF9E66",
    ],
    [
      "$orange500",
      "#FF7E36",
    ],
    [
      "$orange600",
      "#FA6616",
    ],
  ],
  "gray": [
    [
      "$gray100",
      "#F2F3F6",
    ],
    [
      "$gray200",
      "#EAEBEE",
    ],
    [
      "$gray300",
      "#DCDEE3",
    ],
    [
      "$gray400",
      "#D1D3D8",
    ],
    [
      "$gray500",
      "#ADB1BA",
    ],
    [
      "$gray600",
      "#868B94",
    ],
    [
      "$gray700",
      "#4D5159",
    ],
    [
      "$gray900",
      "#212124",
    ],
  ],
  "green": [
    [
      "$green50",
      "#E8FAF6",
    ],
    [
      "$green500",
      "#00B493",
    ],
    [
      "$green800",
      "#008C72",
    ],
  ],
  "red": [
    [
      "$red50",
      "#FFF3F2",
    ],
    [
      "$red800",
      "#E81300",
    ],
  ],
  "white": [
    [
      "$white",
      "#FFF",
    ],
  ],
  "yellow": [
    [
      "$yellow50",
      "#FFF7E6",
    ],
    [
      "$yellow500",
      "#FFC552",
    ],
    [
      "$yellow800",
      "#CE6400",
    ],
  ],
}
`;

exports[`color scheme dark 1`] = `
{
  "blue": [
    [
      "$blue50",
      "#DBE6E9",
    ],
    [
      "$blue800",
      "#0C7EAB",
    ],
  ],
  "carrot": [
    [
      "$orange50",
      "#EDE4E0",
    ],
    [
      "$orange100",
      "#EDD3C4",
    ],
    [
      "$orange200",
      "#EDC4AD",
    ],
    [
      "$orange300",
      "#EDB08E",
    ],
    [
      "$orange400",
      "#EE9561",
    ],
    [
      "$orange500",
      "#ED7735",
    ],
    [
      "$orange600",
      "#E96017",
    ],
  ],
  "gray": [
    [
      "$gray100",
      "#2B2E33",
    ],
    [
      "$gray200",
      "#34373D",
    ],
    [
      "$gray300",
      "#43474F",
    ],
    [
      "$gray400",
      "#50545C",
    ],
    [
      "$gray500",
      "#6D717A",
    ],
    [
      "$gray600",
      "#868B94",
    ],
    [
      "$gray700",
      "#ADB1BA",
    ],
    [
      "$gray900",
      "#EAEBEE",
    ],
  ],
  "green": [
    [
      "$green50",
      "#D8E9E5",
    ],
    [
      "$green500",
      "#03A88A",
    ],
    [
      "$green800",
      "#03836C",
    ],
  ],
  "red": [
    [
      "$red50",
      "#EDE2E2",
    ],
    [
      "$red800",
      "#D81403",
    ],
  ],
  "white": [
    [
      "$white",
      "#212124",
    ],
  ],
  "yellow": [
    [
      "$yellow50",
      "#EDE6D6",
    ],
    [
      "$yellow500",
      "#EDB84E",
    ],
    [
      "$yellow800",
      "#C05F03",
    ],
  ],
}
`;

exports[`semantic colors light 1`] = `
{
  "background": "#FFF",
  "backgroundLow": "#F2F3F6",
}
`;

exports[`semantic colors dark 1`] = `
{
  "background": "#212124",
  "backgroundLow": "#17171A",
}
`;
